--- a/src/main/resources/i18n/exception_en.properties
+++ b/src/main/resources/i18n/exception_en.properties
@@ -15,3 +15,4 @@ unsupportedImageFormatException.msg=unsupportedImageFormatException
 fileUploadFailureException.msg=fileUploadFailureException
 commentNotFoundException.msg=commentNotFoundException
 messageNotFoundException.msg=messageNotFoundException
+refreshTokenFailureException.msg=refreshTokenFailureException
